versions/7.7.0/community/experts.mdx
---
title: 'Bazel Community Experts'
---

Companies who have contributed significantly to the Bazel community and can help with your project

---

<Columns cols={2}>
<Card title="Aspect Development" img="/community/images/aspect-dev-logo.png" cta="Learn more" href="https://www.aspect.dev/">
Aspect Development is a Bazel consulting company. For years our experts have contributed to Bazel at Google and maintained official Bazel rules. We offer clients this firsthand, comprehensive technical experience both with Bazel itself and with the ways it integrates with the surrounding toolchain, developer workflow, and business processes. With decades of combined industry experience, our experts have championed the benefits of Bazel since its initial release in 2015. We're passionate about helping companies optimize the way they build and test software with this innovative build tool.

</Card>
<Card title="Bitrise" img="/community/images/bitrise-logo.png" cta="Learn more" href="https://bitrise.io/why/features/mobile-build-caching-for-better-build-test-performance">
Bitrise is the world’s leading mobile-first CI/CD Platform. Our Bitrise Build Cache & CDN product enables enterprises and high-growth organizations to optimize and elevate their Bazel projects. Bitrise brings to market an uncontested build and test caching solution available nowhere else. The first of its kind, fully managed by Bitrise requiring no setup or maintenance, you can use our out-of-the-box cache Steps to enjoy a deeply integrated CI/CD & Bazel experience or integrate our cache directly into your builds on any other platform.

</Card>
</Columns>

<Columns cols={2}>
<Card title="BuildBuddy" img="/community/images/buildbuddy-logo.svg" cta="Learn more" href="https://www.buildbuddy.io/">
BuildBuddy provides an open-core suite of enterprise features for Bazel. Included are a Remote Build Execution service, a shared build artifact cache, and a build result UI. It's available as a fully-managed cloud service or as an easy to deploy on-prem solution. The service is free to use for individuals and open-source projects. BuildBuddy is based in San Francisco, backed by Y Combinator, and founded by two ex-Googlers deeply passionate about making developers more productive.

</Card>
<Card title="Codethink" img="/community/images/codethink-logo.svg" cta="Learn more" href="https://www.codethink.co.uk/">
Codethink is an Open Source software consultancy providing development, integration, test automation and whole-of-life maintenance services for advanced software on production embedded devices and cloud infrastructure. Codethink works with international-scale organisations exploiting Bazel and remote execution solutions to increase continuous delivery productivity and throughput.

</Card>
</Columns>

<Columns cols={2}>
<Card title="EngFlow" img="/community/images/engflow-logo.svg" cta="Learn more" href="https://www.engflow.com/">
EngFlow helps companies accelerate builds for Bazel, Goma, and Android Platform. Builds, tests and CI are typically 5 to 10x faster when using EngFlow’s remote build execution, caching, and build results UI. Customers also benefit from the company’s unparalleled Bazel expertise. Created by the engineer who led the development of Bazel, EngFlow upstreams Bazel changes in the interest of customers, and has partnerships with other Bazel experts.

</Card>
<Card title="EPAM" img="/community/images/epam-logo.png" cta="Learn more" href="https://www.epam.com/">
Since 1993 EPAM has leveraged its ‘Engineering DNA’ to become a leading global product development, digital platform engineering, and top digital and product design agency. Due to its tight partnership with Google, EPAM has extensive Bazel expertise and is ready to assess readiness and perform complex migration to Bazel in order to streamline development and CI/CD processes for any technology and complexity including custom rules and tools development, remote cache and execution setup.

</Card>
</Columns>

<Columns cols={2}>
<Card title="Oasis Digital" img="/community/images/oasis-logo.png" cta="Learn more" href="https://oasisdigital.com/">
Whether you are considering Bazel or are underway in a complex migration, Oasis Digital can train your build engineers and app developers, assist with build migration, and enhance Bazel rules for your use cases. More broadly, we can assist with the related complexities teams experience while adopting a monorepo approach, cross-project continuous integration, dev-ops, single-version policy, and other technical-organizational challenges.

</Card>
<Card title="SUM Global" img="/community/images/sumglobal-logo.png" cta="Learn more" href="http://sumglobal.com/bazel-build">
SUM Global Technology is an IT consulting firm. We help create high performance CI/CD build infrastructures. Combining decades of build domain knowledge with a deep technical expertise using Bazel, SUM Global works with your organization to create and enhance the software delivery process. We specialize in Java, Android and Angular builds as well as conversions from other tools. We can help with Google Remote Build Execution.

</Card>
</Columns>

<Columns cols={2}>
<Card title="Tweag" img="/community/images/tweag-logo.png" cta="Learn more" href="https://www.tweag.io/">
Tweag I/O is one of Bazel's earliest adopters, an active contributor of new features and new open source extensions since early 2018. Our specialty: partner with you to help you achieve near byte-for-byte reproducibility, fully traceable all the way to production and conveniently auditable builds that can be cached correctly and run fast. Tweag engineers combine extensive knowledge of Bazel with a capacity for deep technical understanding of your architecture, because no two builds are the same. We get you ready for Bazel with our Bazel Readiness Assessment, perform migrations, and improve existing setups.

</Card>
</Columns>

